netwerk/base/nsSimpleURI.cpp
@@ -61,9 +61,9 @@ NS_INTERFACE_TABLE_HEAD(nsSimpleURI)
   NS_INTERFACE_TABLE(nsSimpleURI, nsIURI, nsISerializable)
   NS_INTERFACE_TABLE_TO_MAP_SEGUE
   NS_IMPL_QUERY_CLASSINFO(nsSimpleURI)
-  if (aIID.Equals(kThisSimpleURIImplementationCID))
+  if (aIID.Equals(kThisSimpleURIImplementationCID)) {
     foundInterface = static_cast<nsIURI*>(this);
-  else
+  } else
     NS_INTERFACE_MAP_ENTRY(nsISizeOf)
 NS_INTERFACE_MAP_END
 
@@ -265,14 +265,18 @@ nsSimpleURI::GetHasRef(bool* result) {
   return NS_OK;
 }
 
-nsresult nsSimpleURI::SetSpecInternal(const nsACString& aSpec) {
+nsresult nsSimpleURI::SetSpecInternal(const nsACString& aSpec,
+                                      bool aStripWhitespace) {
   nsresult rv = net_ExtractURLScheme(aSpec, mScheme);
   if (NS_FAILED(rv)) {
     return rv;
   }
 
   nsAutoCString spec;
-  rv = net_FilterAndEscapeURI(aSpec, esc_OnlyNonASCII, spec);
+  rv = net_FilterAndEscapeURI(
+      aSpec, esc_OnlyNonASCII,
+      aStripWhitespace ? ASCIIMask::MaskWhitespace() : ASCIIMask::MaskCRLFTab(),
+      spec);
   if (NS_FAILED(rv)) {
     return rv;
   }
@@ -280,8 +284,7 @@ nsresult nsSimpleURI::SetSpecInternal(const nsACString& aSpec) {
   int32_t colonPos = spec.FindChar(':');
   MOZ_ASSERT(colonPos != kNotFound, "A colon should be in this string");
   // This sets mPath, mQuery and mRef.
-  return SetPathQueryRefEscaped(Substring(spec, colonPos + 1),
-                                /* aNeedsEscape = */ false);
+  return SetPathQueryRefInternal(Substring(spec, colonPos + 1));
 }
 
 NS_IMETHODIMP
@@ -375,48 +378,22 @@ nsSimpleURI::GetPathQueryRef(nsACString& result) {
 }
 
 nsresult nsSimpleURI::SetPathQueryRef(const nsACString& aPath) {
-  return SetPathQueryRefEscaped(aPath, true);
-}
-nsresult nsSimpleURI::SetPathQueryRefEscaped(const nsACString& aPath,
-                                             bool aNeedsEscape) {
-  nsresult rv;
   nsAutoCString path;
-  if (aNeedsEscape) {
-    rv = NS_EscapeURL(aPath, esc_OnlyNonASCII, path, fallible);
-    if (NS_FAILED(rv)) {
-      return rv;
-    }
-  } else {
-    if (!path.Assign(aPath, fallible)) {
-      return NS_ERROR_OUT_OF_MEMORY;
-    }
+  nsresult rv = NS_EscapeURL(aPath, esc_OnlyNonASCII, path, fallible);
+  if (NS_FAILED(rv)) {
+    return rv;
   }
+  return SetPathQueryRefInternal(path);
+}
 
-  int32_t queryPos = path.FindChar('?');
-  int32_t hashPos = path.FindChar('#');
+nsresult nsSimpleURI::SetPathQueryRefInternal(const nsACString& aPath) {
+  nsresult rv;
+  const auto* start = aPath.BeginReading();
+  const auto* end = aPath.EndReading();
 
-  if (queryPos != kNotFound && hashPos != kNotFound && hashPos < queryPos) {
-    queryPos = kNotFound;
-  }
-
-  nsAutoCString query;
-  if (queryPos != kNotFound) {
-    query.Assign(Substring(path, queryPos));
-    path.Truncate(queryPos);
-  }
-
-  nsAutoCString hash;
-  if (hashPos != kNotFound) {
-    if (query.IsEmpty()) {
-      hash.Assign(Substring(path, hashPos));
-      path.Truncate(hashPos);
-    } else {
-      // We have to search the hash character in the query
-      hashPos = query.FindChar('#');
-      hash.Assign(Substring(query, hashPos));
-      query.Truncate(hashPos);
-    }
-  }
+  // Find the first instance of ? or # that marks the end of the path.
+  auto hashOrQueryFilter = [](char c) { return c == '?' || c == '#'; };
+  const auto* pathEnd = std::find_if(start, end, hashOrQueryFilter);
 
   mIsQueryValid = false;
   mQuery.Truncate();
@@ -425,16 +402,27 @@ nsresult nsSimpleURI::SetPathQueryRefEscaped(const nsACString& aPath,
   mRef.Truncate();
 
   // The path
-  if (!mPath.Assign(path, fallible)) {
+  if (!mPath.Assign(Substring(start, pathEnd), fallible)) {
     return NS_ERROR_OUT_OF_MEMORY;
   }
 
-  rv = SetQuery(query);
+  if (pathEnd == end) {
+    return NS_OK;
+  }
+
+  const auto* queryEnd =
+      std::find_if(pathEnd, end, [](char c) { return c == '#'; });
+
+  rv = SetQuery(Substring(pathEnd, queryEnd));
   if (NS_FAILED(rv)) {
     return rv;
   }
 
-  return SetRef(hash);
+  if (queryEnd == end) {
+    return NS_OK;
+  }
+
+  return SetRef(Substring(queryEnd, end));
 }
 
 NS_IMETHODIMP
@@ -535,7 +523,7 @@ nsSimpleURI::SchemeIs(const char* i_Scheme, bool* o_Equals) {
 
   // mScheme is guaranteed to be lower case.
   if (*i_Scheme == *this_scheme || *i_Scheme == (*this_scheme - ('a' - 'A'))) {
-    *o_Equals = PL_strcasecmp(this_scheme, i_Scheme) ? false : true;
+    *o_Equals = PL_strcasecmp(this_scheme, i_Scheme) == 0;
   } else {
     *o_Equals = false;
   }
@@ -727,7 +715,8 @@ nsresult nsSimpleURI::SetQueryWithEncoding(const nsACString& aQuery,
 
 // Queries this list of interfaces. If none match, it queries mURI.
 NS_IMPL_NSIURIMUTATOR_ISUPPORTS(nsSimpleURI::Mutator, nsIURISetters,
-                                nsIURIMutator, nsISerializable)
+                                nsIURIMutator, nsISerializable,
+                                nsISimpleURIMutator)
 
 NS_IMETHODIMP
 nsSimpleURI::Mutate(nsIURIMutator** aMutator) {
