xpcom/string/nsASCIIMask.h
@@ -51,17 +51,18 @@ class ASCIIMask {
 // ...
 // if (someChar < 128 && sABCMask[someChar]) this is A or B or C
 
-namespace details {
+namespace asciimask_details {
 template <typename F, size_t... Indices>
 constexpr std::array<bool, 128> CreateASCIIMask(
     F fun, std::index_sequence<Indices...>) {
   return {{fun(Indices)...}};
 }
-}  // namespace details
+}  // namespace asciimask_details
 
 template <typename F>
 constexpr std::array<bool, 128> CreateASCIIMask(F fun) {
-  return details::CreateASCIIMask(fun, std::make_index_sequence<128>{});
+  return asciimask_details::CreateASCIIMask(fun,
+                                            std::make_index_sequence<128>{});
 }
 
 }  // namespace mozilla
